2007-07-27  Darin Adler  <darin@apple.com>

        Reviewed by John Sullivan.

        - fix <rdar://problem/5261393> In Mail the plain text alternatives to messages with attachments show weird little OBJ thingies

        * fast/text/zero-width-characters-expected.txt: Added.
        * fast/text/zero-width-characters.html: Added.

2007-07-26  Darin Adler  <darin@apple.com>

        * http/tests/security/cross-frame-access-put-expected.txt:
        Checked in corrected results that match the checked-in test.

2007-07-26  Tristan O'Tierney  <tristan@apple.com>

        Reviewed by Anders Carlsson.
        
        <rdar://problem/5350019> REGRESSION: Pages on milliyet.com are added to Back list when visited, causing Back button to just reload

        * http/tests/navigation/lockedhistory-iframe-expected.txt: Added.
        * http/tests/navigation/lockedhistory-iframe.html: Added.

2007-07-26  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Sam.

        - Updated results as they are affected by my previous checkin.

        * http/tests/security/cross-frame-access-put-expected.txt:
        * http/tests/security/resources/cross-frame-iframe-for-put-test.html:

2007-07-26  Kevin McCullough  <kmccullough@apple.com>

        - Fixed bot breakage.

        * fast/dom/Window/window-resize.html:

2007-07-26  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Darin, Geoff and Sam.

        - <rdar://problem/5150461> Resizing the window larger than the screen causes no resize.

        - Tests to ensure we resize/move the window out of bounds correctly.

        * fast/dom/Window/window-resize-expected.txt: Added.
        * fast/dom/Window/window-resize.html: Added.
        * mac/leopard/Skipped:

2007-07-26  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Brady.

        - Added leopard-specific results for <rdar://problem/5228256> REGRESSION(Leopard): layout test failures: security/block-test
